stirling/stirling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-deployment
  labels:
    app: stirling
  namespace: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling
  template:
    metadata:
      labels:
        app: stirling
    spec:
      volumes:
      - name: stirling-config
        emptyDir: {}
      - name: stirling-configmap
        configMap:
          name: stirling-config
      containers:
      - name: stirling-pdf
        image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: stirling-config
          mountPath: /configs
