stirling/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stirling-svc
  namespace: stirling-pdf
spec:
  selector:
    app: stirling
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
