stirling/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-http"
  namespace: stirling-pdf

spec:
  tls:
  - hosts:
    - "pdf.infrazone.cc"
    secretName: letsencrypt-prod
  rules:
  - host: "pdf.infrazone.cc"
    http  :
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: stirling-svc
            port:
              number: 8080
